# cmake_practice

./: README.md
11/: CMakeLists.txt  main.cpp
11/meat/: CMakeLists.txt
11/meat/include/: meat.h
11/meat/src/: meat.cpp
11/people/: CMakeLists.txt
11/people/include/: people_single.h
11/people/src/: people_single.cpp
11/vegetable/: CMakeLists.txt
11/vegetable/include/: ll.h  ram.h  vegetable.h
11/vegetable/src/: vegetable.cpp
